2011-07-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* ImageSelection-test/ImageSelection-test.m: Test
	+[NSGraphicsContext graphicsContextWithBitmapImageRep:], which isn't
	working with cairo.

2011-06-27  Eric Wasylishen  <ewasylishen@gmail.com>

	* ImageSelection-test/ImageSelection-test.m: Test that drawing a vector
	rep scales properly.

2011-06-16  Eric Wasylishen  <ewasylishen@gmail.com>

	* ImageSelection-test/ImageSelection-test.m: Also test NSButton's image
	scaling

2011-06-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* ImageSelection-test/ImageSelection-test.m: Test NSImageView scaling

2011-06-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* ImageSelection-test/ImageSelection-test.m: Add a few more cases

2011-06-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* ImageSelection-test/ImageSelection-test.m: Test drawing sub-
	regions of images.

2011-06-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* ImageSelection-test/ImageSelection-test.m: Expand to include
	tests for -setSize: as well as complex clipping paths

2011-06-13  Eric Wasylishen  <ewasylishen@gmail.com>

	* ImageSelection-test: Fix the TIFFs, which had some sub-images
	inadvertently set to greyscale.

2011-06-08  Eric Wasylishen  <ewasylishen@gmail.com>

	* ImageSelection-test: New test to test how NSImage chooses
	an image rep to draw when many are available. Only a basic
	skeleton of a test is written so far.

	This should include testing: ICNS files with multiple icon sizes,
	TIFF files with	multiple icon sizes and the same DPI, TIFF files
	with multiple simage izes and different DPI (e.g. 64x64@72dpi
	and 256x256@288dpi)

2011-05-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* NSTextView-test/NSTextView-test.m: Test links (add a link on the
	second word of the lorem ipsum text to a wikipedia article)

2011-05-11  Eric Wasylishen  <ewasylishen@gmail.com>

	* PixelExactDrawing-test: Add a new test case.

2011-05-11  Eric Wasylishen  <ewasylishen@gmail.com>
